# git-review

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: release.yml
git_review/: __init__.py  agent.py  agent_tools.py  agile_planner.py  app.py  cli.py  commit_message_generator.py  config.py  github_client.py  github_source_sync.py  issue_factory.py  langgraph_middleware.py  langgraph_pipeline.py  llm_client.py  models.py  prompt_utils.py  reporter.py  tables.py  ui_workflows.py
git_review/agent_app/: __init__.py  agent_app.py  rxconfig.py  state.py
git_review/agent_app/components/: __init__.py  chat.py  hitl_panel.py  settings.py  tool_call.py
tests/: test_agent_tools.py  test_agile_planner.py  test_cli.py  test_commit_message_generator.py  test_config.py  test_github_client.py  test_github_source_sync.py  test_issue_factory.py  test_langgraph_middleware.py  test_langgraph_pipeline.py  test_llm_client.py  test_prompt_utils.py  test_reporter.py  test_tables.py  test_ui_workflows.py
vscode-extension/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts
