[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-review"
version = "0.1.0"
description = "CLI tool and Python SDK to extract GitHub activity and summarise it with an LLM"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "openai>=1.14",
    "rich>=13.7",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
]

[project.scripts]
git-review = "git_review.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["git_review*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
